<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Signup_page">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/create_an_account"
        android:textColor="@color/white"
        android:fontFamily="serif-monospace"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/please_enter_your_details"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="8dp"
                android:layout_weight="0.3"
                android:paddingStart="8dp"
                app:srcCompat="@drawable/baseline_person_24_white" />

            <EditText
                android:id="@+id/Hotel_application_signup_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:hint="@string/name"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_email"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="8dp"
                android:layout_weight="0.3"
                android:paddingStart="8dp"
                app:srcCompat="@drawable/baseline_email_24" />

            <EditText
                android:id="@+id/Hotel_application_signup_email"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email"
                android:fontFamily="serif-monospace"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/baseline_lock_24"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="374dp" />

            <EditText
                android:id="@+id/Hotel_application_signup_password"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginStart="10dp"
                android:fontFamily="serif-monospace"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/baseline_school_24"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="374dp" />

            <EditText
                android:id="@+id/Hotel_application_signup_branch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:hint="@string/branch"
                android:inputType="text" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/baseline_school_24"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="374dp" />

            <EditText
                android:id="@+id/Hotel_application_signup_semester"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:fontFamily="serif-monospace"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:hint="@string/semester"
                android:inputType="number" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/Hotel_application_signup_signup_btn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_up"
        android:fontFamily="serif-monospace"
        android:background="@drawable/common_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hotel_application_signup_signup_btn"
        app:layout_constraintVertical_bias="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:layout_weight="1"
                android:text="@string/signup_acc"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Hotel_application_signup_signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:fontFamily="serif-monospace"
                android:textColor="@color/ui_green"
                android:text="@string/sign_in"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>