<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/profile_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="8dp"
                android:layout_weight="0.3"
                android:paddingStart="8dp"
                app:srcCompat="@drawable/baseline_person_24_white" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:layout_marginStart="20dp"
                android:hint="@string/name"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_email"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:layout_weight="0.3"
                android:paddingStart="8dp"
                app:srcCompat="@drawable/baseline_email_24" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:textSize="25sp"
                android:layout_marginStart="20dp"
                android:hint="@string/email"
                 />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/baseline_school_24"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="374dp" />

            <TextView
                android:id="@+id/profile_branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:layout_marginStart="20dp"
                android:hint="@string/branch"
              />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/baseline_school_24"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="374dp" />

            <TextView
                android:id="@+id/profile_semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="serif-monospace"
                android:textSize="25sp"
                android:layout_marginStart="20dp"
                android:paddingTop="10dp"
                android:hint="Semester"
                />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/profile_edit_profile"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:text="@string/edit_profile"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/common_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"/>

    <Button
        android:id="@+id/profile_logout"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_button"
        android:text="@string/logout"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_profile" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_logout"
        app:layout_constraintVertical_bias="1.0">


        <ImageView

            android:id="@+id/profile_activity_down_navigation_bar_home"
            android:layout_width="35dp"
            android:layout_height="35dp"

            android:layout_marginStart="15dp"
            android:src="@drawable/baseline_home_24_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_activity_down_navigation_bar_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/baseline_person_24_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/profile_activity_down_navigation_bar_registered"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_format_list_bulleted_24_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profile_activity_down_navigation_bar_profile"
            app:layout_constraintStart_toEndOf="@+id/profile_activity_down_navigation_bar_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>